--- a/whatsupp.html
+++ b/whatsupp.html
@@ -75,7 +75,24 @@
       </div>
 
       <div class="space-y-6">
-        <!-- Bloc FÊTE : tout en haut, le plus récent -->
+        <!-- 20 juin 2025 : Changement de nom -->
+        <div class="timeline-item">
+          <div class="bg-gradient-to-r from-yellow-50 to-yellow-100 rounded-lg p-4 border-l-4 border-yellow-400">
+            <div class="flex items-center justify-between mb-2">
+              <span class="text-sm font-semibold text-yellow-700 bg-yellow-200 px-3 py-1 rounded-full">20 juin 2025</span>
+              <span class="text-xs text-yellow-700 font-medium px-2 py-1 rounded" style="background: linear-gradient(135deg, #fbbf24, #f59e42); color: white;">CHANGEMENT</span>
+            </div>
+            <h4 class="text-gray-800 font-semibold mb-2">📝 Changement de nom : "Développement" devient "Blogue"</h4>
+            <p class="text-gray-700 mb-2">La catégorie "Développement" a été renommée en "Blogue" pour mieux refléter son contenu.</p>
+            <div class="bg-yellow-50 border-l-4 border-yellow-400 p-3 mt-3">
+              <div class="flex items-center">
+                <span class="text-xs text-yellow-700 font-medium px-2 py-1 rounded mr-2" style="background: linear-gradient(135deg, #fbbf24, #f59e42); color: white;">RENOMMÉ</span>
+                <span class="text-yellow-700 text-sm">Nouvelle dénomination plus adaptée au contenu proposé</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Bloc FÊTE ajouté ici -->
         <div class="timeline-item">
           <div class="bg-gradient-to-r from-pink-50 to-yellow-100 rounded-lg p-4 border-l-4 border-pink-400">
             <div class="flex items-center justify-between mb-2">
@@ -97,21 +114,224 @@
             </div>
           </div>
         </div>
-        <!-- 20 juin 2025 : Changement de nom -->
+        <!-- 18 juin 2025 : Sécurité -->
         <div class="timeline-item">
-          <div class="bg-gradient-to-r from-yellow-50 to-yellow-100 rounded-lg p-4 border-l-4 border-yellow-400">
+          <div class="bg-gradient-to-r from-blue-50 to-blue-100 rounded-lg p-4 border-l-4 border-blue-400">
             <div class="flex items-center justify-between mb-2">
-              <span class="text-sm font-semibold text-yellow-700 bg-yellow-200 px-3 py-1 rounded-full">20 juin 2025</span>
-              <span class="text-xs text-yellow-700 font-medium px-2 py-1 rounded" style="background: linear-gradient(135deg, #fbbf24, #f59e42); color: white;">CHANGEMENT</span>
+              <span class="text-sm font-semibold text-blue-700 bg-blue-200 px-3 py-1 rounded-full">18 juin 2025</span>
+              <span class="text-xs text-white font-medium new-feature px-2 py-1 rounded">SÉCURITÉ</span>
             </div>
-            <h4 class="text-gray-800 font-semibold mb-2">📝 Changement de nom : "Développement" devient "Blogue"</h4>
-            <p class="text-gray-700 mb-2">La catégorie "Développement" a été renommée en "Blogue" pour mieux refléter son contenu.</p>
-            <div class="bg-yellow-50 border-l-4 border-yellow-400 p-3 mt-3">
+            <h4 class="text-gray-800 font-semibold mb-2">🔒 Système de mot de passe pour les administrateurs</h4>
+            <p class="text-gray-700 mb-2">Implémentation d'un système sécurisé de mot de passe pour accéder aux sections réservées aux administrateurs</p>
+            <div class="bg-blue-50 border-l-4 border-blue-400 p-3 mt-3">
               <div class="flex items-center">
-                <span class="text-xs text-yellow-700 font-medium px-2 py-1 rounded mr-2" style="background: linear-gradient(135deg, #fbbf24, #f59e42); color: white;">RENOMMÉ</span>
-                <span class="text-yellow-700 text-sm">Nouvelle dénomination plus adaptée au contenu proposé</span>
+                <span class="text-xs text-blue-600 font-medium px-2 py-1 rounded mr-2 bg-blue-200">AJOUTÉ</span>
+                <span class="text-blue-700 text-sm">Sécurisation des sections "Nous contacter" et "Développement"</span>
               </div>
             </div>
           </div>
         </div>
-        <!-- ... la suite reste inchangée ... -->
+        <!-- ... (les autres timeline-item suivants restent inchangés) ... -->
+        <div class="timeline-item">
+          <div class="bg-gradient-to-r from-blue-50 to-blue-100 rounded-lg p-4 border-l-4 border-blue-400">
+            <div class="flex items-center justify-between mb-2">
+              <span class="text-sm font-semibold text-blue-700 bg-blue-200 px-3 py-1 rounded-full">17 juin 2025</span>
+              <span class="text-xs text-white font-medium bug-fix px-2 py-1 rounded">CORRECTION</span>
+            </div>
+            <h4 class="text-gray-800 font-semibold mb-2">🔧 Correction des boutons de la page d'accueil</h4>
+            <p class="text-gray-700 mb-2">Résolution du problème qui empêchait de cliquer sur les boutons de navigation de la page d'accueil</p>
+            <div class="bg-blue-50 border-l-4 border-blue-400 p-3 mt-3">
+              <div class="flex items-center">
+                <span class="text-xs text-blue-600 font-medium px-2 py-1 rounded mr-2 bg-blue-200">RÉSOLU</span>
+                <span class="text-blue-700 text-sm">Navigation restaurée et fonctionnelle sur toutes les sections</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="bg-gradient-to-r from-indigo-50 to-indigo-100 rounded-lg p-4 border-l-4 border-indigo-400">
+            <div class="flex items-center justify-between mb-2">
+              <span class="text-sm font-semibold text-indigo-700 bg-indigo-200 px-3 py-1 rounded-full">17 juin 2025</span>
+              <span class="text-xs text-indigo-600 font-medium new-feature px-2 py-1 rounded">NOUVEAU</span>
+            </div>
+            <h4 class="text-gray-800 font-semibold mb-2">🏠 Ajout du bouton retour à l'accueil</h4>
+            <p class="text-gray-700 mb-2">Intégration d'un bouton de retour vers la page d'accueil dans la section "What's up"</p>
+            <div class="bg-indigo-50 border-l-4 border-indigo-400 p-3 mt-3">
+              <div class="flex items-center">
+                <span class="text-xs text-indigo-600 font-medium new-feature px-2 py-1 rounded mr-2">AJOUTÉ</span>
+                <span class="text-indigo-700 text-sm">Navigation simplifiée entre les pages du site</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="bg-gradient-to-r from-green-50 to-green-100 rounded-lg p-4 border-l-4 border-green-400">
+            <div class="flex items-center justify-between mb-2">
+              <span class="text-sm font-semibold text-green-700 bg-green-200 px-3 py-1 rounded-full">17 juin 2025</span>
+              <span class="text-xs text-white font-medium whatsapp-update px-2 py-1 rounded">WHATSAPP</span>
+            </div>
+            <h4 class="text-gray-800 font-semibold mb-2">📱 Système de mise à jour WhatsApp</h4>
+            <p class="text-gray-700 mb-2">Lancement du système de notifications et mises à jour via WhatsApp pour la communauté FashionFlow</p>
+            <div class="bg-green-50 border-l-4 border-green-400 p-3 mt-3">
+              <div class="flex items-center">
+                <span class="text-xs text-green-600 font-medium new-feature px-2 py-1 rounded mr-2">NOUVEAU</span>
+                <span class="text-green-700 text-sm">Rejoignez notre groupe WhatsApp pour recevoir les actualités en temps réel</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="bg-gradient-to-r from-green-50 to-green-100 rounded-lg p-4 border-l-4 border-green-400">
+            <div class="flex items-center justify-between mb-2">
+              <span class="text-sm font-semibold text-green-700 bg-green-200 px-3 py-1 rounded-full">17 juin 2025</span>
+              <span class="text-xs text-green-600 font-medium new-feature px-2 py-1 rounded">AMÉLIORATION</span>
+            </div>
+            <h4 class="text-gray-800 font-semibold mb-2">Amélioration des catégories du wiki</h4>
+            <p class="text-gray-700 mb-2">Optimisation et restructuration des catégories du Wiki FashionFlow</p>
+            <div class="bg-red-50 border-l-4 border-red-400 p-3 mt-3">
+              <span class="text-xs text-red-600 font-medium bug-fix px-2 py-1 rounded mr-2">CORRECTION</span>
+              <span class="text-red-700 text-sm">Correction du bug d'affichage dans la catégorie "What's up ?"</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Bouton Archives avec vérification du mot de passe -->
+    <div class="flex justify-center mb-8">
+      <a href="#" onclick="checkAdminPassword()" class="btn-primary inline-flex items-center px-6 py-3 rounded-lg text-white font-medium hover:text-white transition-colors">
+        <i class="fas fa-archive mr-2"></i>
+        Voir les archives complètes
+      </a>
+    </div>
+    <script>
+      function checkAdminPassword() {
+        const password = prompt("Entrez le mot de passe admin :");
+        // Remplace "FashionAdmin123" par ton vrai mot de passe sécurisé
+        if (password === "FashionAdmin123") {
+          window.location.href = "ArchiveMiseajour.html";
+        } else if (password === null) {
+          // L'utilisateur a annulé
+          alert("Accès annulé.");
+        } else {
+          alert("Mot de passe incorrect.");
+        }
+      }
+    </script>
+
+    <section class="glass-effect rounded-2xl p-8 shadow-xl card-hover">
+      <div class="flex items-center mb-8">
+        <div class="w-12 h-12 bg-gradient-to-br from-purple-500 to-pink-600 rounded-xl flex items-center justify-center mr-4">
+          <span class="text-white text-xl">🚀</span>
+        </div>
+        <div>
+          <h2 class="text-2xl font-bold text-gray-800">Prochaines améliorations prévues</h2>
+          <p class="text-gray-600 mt-1">Fonctionnalités en développement</p>
+        </div>
+      </div>
+
+      <div class="grid md:grid-cols-2 gap-6">
+        <div class="bg-gradient-to-br from-blue-50 to-blue-100 p-6 rounded-xl border border-blue-200">
+          <div class="flex items-center mb-3">
+            <span class="feature-icon text-2xl mr-3">📞</span>
+            <h3 class="font-semibold text-gray-800">Nous contacter</h3>
+          </div>
+          <p class="text-gray-600 text-sm">Ajout de la catégorie "Nous contacter" dans la page d'accueil</p>
+          <span class="inline-block mt-2 text-xs bg-blue-100 text-blue-700 px-2 py-1 rounded-full">En développement</span>
+          <!-- Section admin "Nous contacter" -->
+          <div id="contact-admin" class="admin-section mt-4 p-4 bg-blue-50 rounded-lg border border-blue-200">
+            <h4 class="font-semibold text-blue-800 mb-2 flex items-center">
+              <i class="fas fa-lock mr-2"></i> Section Admin - Nous contacter
+            </h4>
+            <p class="text-sm text-blue-700 mb-3">Cette section est réservée aux administrateurs.</p>
+            <div class="space-y-3">
+              <div class="p-3 bg-white rounded border border-blue-100">
+                <h5 class="font-medium text-blue-900">Formulaire de contact</h5>
+                <p class="text-xs text-blue-600">Version 1.2 - En cours de test</p>
+              </div>
+              <div class="p-3 bg-white rounded border border-blue-100">
+                <h5 class="font-medium text-blue-900">Gestion des messages</h5>
+                <p class="text-xs text-blue-600">En développement</p>
+              </div>
+            </div>
+          </div>
+          <button onclick="showPasswordModal('contact')" class="mt-3 w-full bg-blue-100 hover:bg-blue-200 text-blue-800 font-medium py-2 px-4 rounded-lg transition-colors">
+            <i class="fas fa-key mr-2"></i> Accès Admin
+          </button>
+        </div>
+
+        <div class="bg-gradient-to-br from-indigo-50 to-indigo-100 p-6 rounded-xl border border-indigo-200">
+          <div class="flex items-center mb-3">
+            <span class="feature-icon text-2xl mr-3">⚙️</span>
+            <h3 class="font-semibold text-gray-800">Catégorie Blogue</h3>
+          </div>
+          <p class="text-gray-600 text-sm">Lancement de la nouvelle catégorie blogue pour les ressources techniques</p>
+          <span class="inline-block mt-2 text-xs bg-indigo-100 text-indigo-700 px-2 py-1 rounded-full">En préparation</span>
+          <!-- Section admin "Développement"/"Blogue" -->
+          <div id="dev-admin" class="admin-section mt-4 p-4 bg-indigo-50 rounded-lg border border-indigo-200">
+            <h4 class="font-semibold text-indigo-800 mb-2 flex items-center">
+              <i class="fas fa-lock mr-2"></i> Section Admin - Blogue
+            </h4>
+            <p class="text-sm text-indigo-700 mb-3">Ressources techniques pour les développeurs.</p>
+            <div class="space-y-3">
+              <div class="p-3 bg-white rounded border border-indigo-100">
+                <h5 class="font-medium text-indigo-900">Documentation API</h5>
+                <p class="text-xs text-indigo-600">Version 2.4 - Mise à jour</p>
+              </div>
+              <div class="p-3 bg-white rounded border border-indigo-100">
+                <h5 class="font-medium text-indigo-900">Journal des changements</h5>
+                <p class="text-xs text-indigo-600">Accès complet</p>
+              </div>
+            </div>
+          </div>
+          <button onclick="showPasswordModal('dev')" class="mt-3 w-full bg-indigo-100 hover:bg-indigo-200 text-indigo-800 font-medium py-2 px-4 rounded-lg transition-colors">
+            <i class="fas fa-key mr-2"></i> Accès Admin
+          </button>
+        </div>
+        <!-- Bloc "Mise à jour du blogue" ajouté ici -->
+        <div class="bg-gradient-to-br from-pink-50 to-yellow-100 p-6 rounded-xl border border-pink-200">
+          <div class="flex items-center mb-3">
+            <span class="feature-icon text-2xl mr-3">📝</span>
+            <h3 class="font-semibold text-gray-800">Mise à jour du blogue</h3>
+          </div>
+          <p class="text-gray-600 text-sm">Améliorations à venir sur la section blogue et nouveaux articles à découvrir prochainement !</p>
+          <span class="inline-block mt-2 text-xs bg-pink-100 text-pink-700 px-2 py-1 rounded-full">À venir</span>
+        </div>
+        <div class="bg-gradient-to-br from-emerald-50 to-emerald-100 p-6 rounded-xl border border-emerald-200">
+          <div class="flex items-center mb-3">
+            <span class="feature-icon text-2xl mr-3">💬</span>
+            <h3 class="font-semibold text-gray-800">Système de commentaires</h3>
+          </div>
+          <p class="text-gray-600 text-sm">Ajout d'un système de commentaires sur chaque section du Wiki</p>
+        </div>
+
+        <div class="bg-gradient-to-br from-indigo-50 to-indigo-100 p-6 rounded-xl border border-indigo-200">
+          <div class="flex items-center mb-3">
+            <span class="feature-icon text-2xl mr-3">❓</span>
+            <h3 class="font-semibold text-gray-800">FAQ</h3>
+          </div>
+          <p class="text-gray-600 text-sm">Création d'une page "Foire aux questions (FAQ)"</p>
+          <span class="inline-block mt-2 text-xs bg-indigo-100 text-indigo-700 px-2 py-1 rounded-full">En préparation</span>
+        </div>
+
+        <div class="bg-gradient-to-br from-pink-50 to-pink-100 p-6 rounded-xl border border-pink-200">
+          <div class="flex items-center mb-3">
+            <span class="feature-icon text-2xl mr-3">🗳️</span>
+            <h3 class="font-semibold text-gray-800">Système de vote</h3>
+          </div>
+          <p class="text-gray-600 text-sm">Possibilité de voter pour les fonctionnalités à venir</p>
+        </div>
+
+        <div class="bg-gradient-to-br from-purple-50 to-purple-100 p-6 rounded-xl border border-purple-200">
+          <div class="flex items-center mb-3">
+            <span class="feature-icon text-2xl mr-3">🍪</span>
+            <h3 class="font-semibold text-gray-800">Cookies</h3>
+          </div>
+          <p class="text-gray-600 text-sm">Ajout d'un système de cookies pour l'expérience utilisateur</p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <!-- ... le reste du fichier inchangé ... -->
+</body>
+</html>
