--- a/whatsupp.html
+++ b/whatsupp.html
@@ -75,23 +75,7 @@
       </div>
 
       <div class="space-y-6">
-        <!-- 20 juin 2025 : Changement de nom -->
-        <div class="timeline-item">
-          <div class="bg-gradient-to-r from-yellow-50 to-yellow-100 rounded-lg p-4 border-l-4 border-yellow-400">
-            <div class="flex items-center justify-between mb-2">
-              <span class="text-sm font-semibold text-yellow-700 bg-yellow-200 px-3 py-1 rounded-full">20 juin 2025</span>
-              <span class="text-xs text-yellow-700 font-medium px-2 py-1 rounded" style="background: linear-gradient(135deg, #fbbf24, #f59e42); color: white;">CHANGEMENT</span>
-            </div>
-            <h4 class="text-gray-800 font-semibold mb-2">📝 Changement de nom : "Développement" devient "Blogue"</h4>
-            <p class="text-gray-700 mb-2">La catégorie "Développement" a été renommée en "Blogue" pour mieux refléter son contenu.</p>
-            <div class="bg-yellow-50 border-l-4 border-yellow-400 p-3 mt-3">
-              <div class="flex items-center">
-                <span class="text-xs text-yellow-700 font-medium px-2 py-1 rounded mr-2" style="background: linear-gradient(135deg, #fbbf24, #f59e42); color: white;">RENOMMÉ</span>
-                <span class="text-yellow-700 text-sm">Nouvelle dénomination plus adaptée au contenu proposé</span>
-              </div>
-            </div>
-          </div>
-        </div>
+       
         <!-- Bloc FÊTE ajouté ici -->
         <div class="timeline-item">
           <div class="bg-gradient-to-r from-pink-50 to-yellow-100 rounded-lg p-4 border-l-4 border-pink-400">
@@ -110,6 +94,23 @@
               <div class="flex items-center">
                 <span class="text-xs text-pink-600 font-medium px-2 py-1 rounded mr-2 bg-pink-200">NOUVEAU</span>
                 <span class="text-pink-700 text-sm">Première publication sur le blogue – on célèbre ça !</span>
+              </div>
+            </div>
+          </div>
+        </div>
+         <!-- 20 juin 2025 : Changement de nom -->
+        <div class="timeline-item">
+          <div class="bg-gradient-to-r from-yellow-50 to-yellow-100 rounded-lg p-4 border-l-4 border-yellow-400">
+            <div class="flex items-center justify-between mb-2">
+              <span class="text-sm font-semibold text-yellow-700 bg-yellow-200 px-3 py-1 rounded-full">20 juin 2025</span>
+              <span class="text-xs text-yellow-700 font-medium px-2 py-1 rounded" style="background: linear-gradient(135deg, #fbbf24, #f59e42); color: white;">CHANGEMENT</span>
+            </div>
+            <h4 class="text-gray-800 font-semibold mb-2">📝 Changement de nom : "Développement" devient "Blogue"</h4>
+            <p class="text-gray-700 mb-2">La catégorie "Développement" a été renommée en "Blogue" pour mieux refléter son contenu.</p>
+            <div class="bg-yellow-50 border-l-4 border-yellow-400 p-3 mt-3">
+              <div class="flex items-center">
+                <span class="text-xs text-yellow-700 font-medium px-2 py-1 rounded mr-2" style="background: linear-gradient(135deg, #fbbf24, #f59e42); color: white;">RENOMMÉ</span>
+                <span class="text-yellow-700 text-sm">Nouvelle dénomination plus adaptée au contenu proposé</span>
               </div>
             </div>
           </div>
@@ -332,6 +333,210 @@
       </div>
     </section>
   </main>
-  <!-- ... le reste du fichier inchangé ... -->
+  <!-- Bouton Archives avec protection admin -->
+  <div class="flex justify-center mb-8">
+    <button class="btn-primary inline-flex items-center px-6 py-3 rounded-lg text-white font-medium hover:text-white transition-colors" onclick="showArchivePopup()">
+      <i class="fas fa-archive mr-2"></i>
+      Voir les archives complètes
+    </button>
+  </div>
+
+  <!-- Popup pour les archives (à ajouter dans votre HTML) -->
+  <div id="archivePopup" class="popup-overlay" style="display: none;">
+    <div class="popup-content email-popup-content">
+      <h3 style="margin-bottom: 1rem;">📁 Archives Complètes</h3>
+      <p style="margin-bottom: 1rem;">Accès restreint aux administrateurs</p>
+      <p style="margin-bottom: 1rem; font-size: 0.9rem;">Entrez le mot de passe admin :</p>
+      <input type="password" class="admin-input" id="archiveAdminPassword" placeholder="Mot de passe admin">
+      <div style="margin-top: 1rem;">
+        <button class="modern-button" onclick="checkArchiveAdminPassword()" style="margin: 0.5rem;">Vérifier</button>
+        <button class="modern-button" onclick="closeArchivePopup()" style="margin: 0.5rem;">Fermer</button>
+      </div>
+    </div>
+  </div>
+  <script>
+    // Fonction pour afficher le popup des archives
+    function showArchivePopup() { document.getElementById('archivePopup').style.display = 'flex'; }
+
+    // Fonction pour fermer le popup des archives
+    function closeArchivePopup() {
+      document.getElementById('archivePopup').style.display = 'none';
+      document.getElementById('archiveAdminPassword').value = '';
+    }
+
+    // Fonction pour vérifier le mot de passe admin des archives
+    function checkArchiveAdminPassword() {
+      const password = document.getElementById('archiveAdminPassword').value;
+      const correctPassword = 'votre_mot_de_passe_admin'; // Remplacez par votre mot de passe
+      if (password === correctPassword) {
+        window.location.href = 'ArchiveMiseajour.html';
+      } else {
+        alert('Mot de passe incorrect !');
+        document.getElementById('archiveAdminPassword').value = '';
+      }
+    }
+    // Fermer le popup en cliquant en dehors
+    document.getElementById('archivePopup').addEventListener('click', function(e) {
+      if (e.target === this) {
+        closeArchivePopup();
+      }
+    });
+    // Permettre la validation avec la touche Entrée
+    document.getElementById('archiveAdminPassword').addEventListener('keypress', function(e) {
+      if (e.key === 'Enter') {
+        checkArchiveAdminPassword();
+      }
+    });
+  </script>
+
+  <!-- Footer avec bouton de retour -->
+  <footer class="bg-white border-t border-gray-200 mt-16">
+    <div class="max-w-6xl mx-auto px-6 py-12 text-center">
+      <!-- Section WhatsApp stylée -->
+      <div class="mb-8">
+        <div class="bg-gradient-to-r from-green-400 via-green-500 to-green-600 rounded-2xl p-8 shadow-2xl transform hover:scale-105 transition-all duration-300 relative overflow-hidden">
+          <div class="absolute inset-0 opacity-10">
+            <div class="absolute top-4 left-4 w-16 h-16 bg-white rounded-full"></div>
+            <div class="absolute bottom-4 right-4 w-12 h-12 bg-white rounded-full"></div>
+            <div class="absolute top-1/2 right-8 w-8 h-8 bg-white rounded-full"></div>
+          </div>
+          <div class="relative z-10">
+            <div class="flex items-center justify-center mb-4">
+              <div class="bg-white rounded-full p-3 mr-4 shadow-lg">
+                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.465 3.516" fill="#25D366"/>
+                </svg>
+              </div>
+              <h3 class="font-bold text-white text-2xl">Actualités en Direct</h3>
+            </div>
+            <p class="text-green-100 text-lg mb-6 font-medium">
+              🚀 Rejoignez notre communauté WhatsApp et soyez les premiers informés !
+            </p>
+            <div class="flex flex-col sm:flex-row items-center justify-center gap-4 mb-4">
+              <div class="flex items-center text-green-100">
+                <span class="mr-2">⚡</span>
+                <span class="font-medium">Mises à jour instantanées</span>
+              </div>
+              <div class="flex items-center text-green-100">
+                <span class="mr-2">🔔</span>
+                <span class="font-medium">Notifications exclusives</span>
+              </div>
+              <div class="flex items-center text-green-100">
+                <span class="mr-2">👥</span>
+                <span class="font-medium">Communauté active</span>
+              </div>
+            </div>
+            <a href="https://chat.whatsapp.com/E3H2dr47fcS8A9v9W2E48i"
+              target="_blank"
+              class="inline-flex items-center bg-white text-green-600 font-bold px-8 py-4 rounded-full text-lg shadow-lg hover:shadow-xl transform hover:scale-110 transition-all duration-300 hover:bg-green-50">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="mr-3">
+                <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.465 3.516"/>
+              </svg>
+              Rejoindre le Groupe
+              <span class="ml-2">→</span>
+            </a>
+            <p class="text-green-200 text-sm mt-4 opacity-90">
+              objectif atteindre les 50 membres avant la fin de l'année ✨
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Bouton de retour à l'accueil -->
+      <div class="mb-8">
+        <a href="index.html" class="btn-back inline-flex items-center px-8 py-4 rounded-lg text-white font-medium hover:text-white transition-all duration-300 text-lg">
+          <svg class="w-6 h-6 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
+          </svg>
+          Retour à l'accueil
+        </a>
+      </div>
+      <div class="border-t border-gray-200 pt-8">
+        <p class="text-gray-600 font-medium text-lg mb-2">
+          © 2025 FashionFlow - Tous droits réservés
+        </p>
+        <p class="text-gray-500">
+          Version 2.3.5 • Dernière mise à jour : 20 juin 2025
+        </p>
+      </div>
+    </div>
+  </footer>
+  <script>
+    // Variables pour gérer la section admin actuelle
+    let currentSection = '';
+    const adminPassword = 'FashionFlow2025'; // Mot de passe admin (à changer en production)
+
+    // Afficher le modal de mot de passe
+    function showPasswordModal(section) {
+      currentSection = section;
+      document.getElementById('passwordModal').style.display = 'flex';
+      document.getElementById('adminPassword').value = '';
+      document.getElementById('passwordError').classList.add('hidden');
+    }
+
+    // Cacher le modal de mot de passe
+    function hidePasswordModal() {
+      document.getElementById('passwordModal').style.display = 'none';
+    }
+
+    // Vérifier le mot de passe
+    function checkPassword() {
+      const enteredPassword = document.getElementById('adminPassword').value;
+      if (enteredPassword === adminPassword) {
+        // Afficher la section admin correspondante
+        document.getElementById(currentSection + '-admin').style.display = 'block';
+        hidePasswordModal();
+      } else {
+        document.getElementById('passwordError').classList.remove('hidden');
+      }
+    }
+
+    // Basculer la visibilité du mot de passe
+    function togglePasswordVisibility() {
+      const passwordInput = document.getElementById('adminPassword');
+      const toggleIcon = document.querySelector('.toggle-password i');
+      if (passwordInput.type === 'password') {
+        passwordInput.type = 'text';
+        toggleIcon.classList.remove('fa-eye');
+        toggleIcon.classList.add('fa-eye-slash');
+      } else {
+        passwordInput.type = 'password';
+        toggleIcon.classList.remove('fa-eye-slash');
+        toggleIcon.classList.add('fa-eye');
+      }
+    }
+
+    // Fermer le modal en cliquant à l'extérieur
+    document.getElementById('passwordModal').addEventListener('click', function(e) {
+      if (e.target === this) {
+        hidePasswordModal();
+      }
+    });
+
+    // Fermer le modal avec la touche ESC
+    document.addEventListener('keydown', function(e) {
+      if (e.key === 'Escape') {
+        hidePasswordModal();
+      }
+    });
+  </script>
+  <!-- Modal Mot de passe admin (à placer à la fin du body) -->
+  <div id="passwordModal" class="password-modal" style="display: none;">
+    <div class="password-content">
+      <h3 class="text-lg font-semibold mb-4">Accès Administrateur</h3>
+      <div class="password-input mb-3">
+        <input type="password" id="adminPassword" class="w-full border rounded px-3 py-2" placeholder="Mot de passe admin">
+        <span class="toggle-password absolute right-3 top-1/2 transform -translate-y-1/2 cursor-pointer" onclick="togglePasswordVisibility()">
+          <i class="fa fa-eye"></i>
+        </span>
+      </div>
+      <p id="passwordError" class="text-red-600 mb-3 hidden">Mot de passe incorrect</p>
+      <div class="flex justify-end space-x-2">
+        <button class="btn-primary px-4 py-2 rounded text-white" onclick="checkPassword()">Valider</button>
+        <button class="btn-back px-4 py-2 rounded text-white" onclick="hidePasswordModal()">Annuler</button>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
 </body>
 </html>
