--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
     <section class="section wiki-section">
       <div class="section-content">
         <h2 class="section-title">WikiFashion</h2>
-        <p class="section-subtitle">Le wiki de FashionFlow !!</p>
+        <p class="section-subtitle">Qui sommes nous ?</p>
         <div class="icon-container">
           <div class="fashion-icon book-icon">📚</div>
         </div>
@@ -429,10 +429,10 @@
       </div>
     </section>
 
-    <!-- Section Blogue -->
+    <!-- Section Blog -->
     <section class="section dev-section">
       <div class="section-content">
-        <h2 class="section-title">Blogue</h2>
+        <h2 class="section-title">Blog</h2>
         <p class="section-subtitle">Avez-vous des idées au sujet de FashionFlow ??</p>
         <div class="icon-container">
           <div class="fashion-icon rocket-icon">🚀</div>
