--- a/blogue.html
+++ b/blogue.html
@@ -128,7 +128,7 @@
 <body>
   <div class="container">
    <div class="header">
-  <h1>📚 Bienvenue à la béta du blogue de Fashion !</h1>
+  <h1>📚 Bienvenue à la béta du blog de Fashion !</h1>
   <p>Tous vos posts de développement en un seul endroit</p>
   <a href="creerunposte.html" class="back-link">← Créer un nouveau post</a>
   <a href="index.html" class="back-link">🏠 Retour à l'accueil</a>
