--- a/index.html
+++ b/index.html
@@ -571,15 +571,15 @@
     }
 
     function contactInstagram() {
-      window.open('https://instagram.com/fashionflow', '_blank');
+      window.open('https://instagram.com/fashionflow_officiel', '_blank');
     }
 
     function contactTwitter() {
-      window.open('https://twitter.com/fashionflow', '_blank');
+      window.open('https://twitter.com/', '_blank');
     }
 
     function contactFacebook() {
-      window.open('https://facebook.com/fashionflow', '_blank');
+      window.open('https://facebook.com/', '_blank');
     }
 
     function contactFAQ() {
