--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
     }
 
     function goToBlogue() {
-      window.location.href = "blogue.html";
+      window.location.href = "maintenance.html";
     }
 
     function donate() {
