--- a/creerunposte.html
+++ b/creerunposte.html
@@ -104,7 +104,7 @@
     <header>
       <div class="logo">FashionFlow Posts 📝</div>
       <div class="header-actions">
-       <a href="blogue.html" class="btn">🏠 Voir les postes </a>
+       <a href="blog.html" class="btn">🏠 Voir les postes </a>
       </div>
     </header>
 
