--- a/whatsupp.html
+++ b/whatsupp.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
+<html lang="fr"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Récapitulatif des Mises à Jour - FashionFlow</title>
@@ -40,7 +38,7 @@
       0% { transform: scale(0.3) rotate(-10deg); opacity: 0; }
       50% { transform: scale(1.05) rotate(2deg); }
       70% { transform: scale(0.95) rotate(-1deg); }
-      100% { transform: scale(1) rotate(0deg); opacity: 1; }
+      100% { transform: scale(1) rotate(0); opacity: 1; }
     }
 
     @keyframes sparkle {
@@ -180,6 +178,28 @@
           </div>
         </div>
 
+        <!-- Nouvelle mise à jour : Arrivée de la FAQ -->
+        <div class="timeline-item">
+          <div class="bg-gradient-to-r from-indigo-50 to-indigo-100 rounded-lg p-4 border-l-4 border-indigo-400 relative overflow-hidden">
+            <div class="flex items-center justify-between mb-2 fade-in-up">
+              <span class="text-sm font-semibold text-indigo-700 bg-indigo-200 px-3 py-1 rounded-full">24 juin 2025</span>
+              <span class="text-xs text-indigo-700 font-medium px-2 py-1 rounded bg-indigo-100">INFO</span>
+            </div>
+            <h4 class="text-gray-800 font-semibold mb-2 fade-in-up">
+              <span class="mr-2">❓</span>
+              Arrivée de la page FAQ
+              <span class="float-emoji ml-2" style="--delay: 0.5s;">📚</span>
+            </h4>
+            <p class="text-gray-700 mb-2 fade-in-up" style="animation-delay: 0.3s;">
+              La page "Foire aux questions (FAQ)" est désormais disponible pour répondre à toutes vos interrogations !
+            </p>
+          </div>
+        </div>
+        <!-- Fin ajout FAQ -->
+
+      </div>
+    </section>
+
     <!-- Bouton Archives avec vérification du mot de passe -->
     <div class="flex justify-center mb-8">
       <a href="#" onclick="checkAdminPassword()" class="btn-primary inline-flex items-center px-6 py-3 rounded-lg text-white font-medium hover:text-white transition-colors">
@@ -247,14 +267,7 @@
           <p class="text-gray-600 text-sm">Ajout d'un système de commentaires sur chaque section du Wiki</p>
         </div>
 
-        <div class="bg-gradient-to-br from-indigo-50 to-indigo-100 p-6 rounded-xl border border-indigo-200">
-          <div class="flex items-center mb-3">
-            <span class="feature-icon text-2xl mr-3">❓</span>
-            <h3 class="font-semibold text-gray-800">FAQ</h3>
-          </div>
-          <p class="text-gray-600 text-sm">Création d'une page "Foire aux questions (FAQ)"</p>
-          <span class="inline-block mt-2 text-xs bg-indigo-100 text-indigo-700 px-2 py-1 rounded-full">En préparation</span>
-        </div>
+        <!-- Bloc FAQ supprimé ici -->
 
         <div class="bg-gradient-to-br from-pink-50 to-pink-100 p-6 rounded-xl border border-pink-200">
           <div class="flex items-center mb-3">
@@ -266,7 +279,81 @@
       </div>
     </section>
   </main>
+<!-- ...le reste de ton fichier est inchangé... -->
+  <!-- Footer avec bouton de retour -->
+  <footer class="bg-white border-t border-gray-200 mt-16">
+    <div class="max-w-6xl mx-auto px-6 py-12 text-center">
+      <!-- Section WhatsApp stylée -->
+      <div class="mb-8">
+        <!-- ... -->
+      </div>
+      <!-- Bouton de retour à l'accueil -->
+      <div class="mb-8">
+        <!-- ... -->
+      </div>
+      
+    </div>
+  </footer>
+  <!-- ...Modal et scripts inchangés... -->
+  <script>
+    // Variables pour gérer la section admin actuelle
+    let currentSection = '';
+    const adminPassword = 'FashionFlow2025'; // Mot de passe admin (à changer en production)
 
+    // Afficher le modal de mot de passe
+    function showPasswordModal(section) {
+      currentSection = section;
+      document.getElementById('passwordModal').style.display = 'flex';
+      document.getElementById('adminPassword').value = '';
+      document.getElementById('passwordError').classList.add('hidden');
+    }
+
+    // Cacher le modal de mot de passe
+    function hidePasswordModal() {
+      document.getElementById('passwordModal').style.display = 'none';
+    }
+
+    // Vérifier le mot de passe
+    function checkPassword() {
+      const enteredPassword = document.getElementById('adminPassword').value;
+      if (enteredPassword === adminPassword) {
+        // Afficher la section admin correspondante
+        document.getElementById(currentSection + '-admin').style.display = 'block';
+        hidePasswordModal();
+      } else {
+        document.getElementById('passwordError').classList.remove('hidden');
+      }
+    }
+
+    // Basculer la visibilité du mot de passe
+    function togglePasswordVisibility() {
+      const passwordInput = document.getElementById('adminPassword');
+      const toggleIcon = document.querySelector('.toggle-password i');
+      if (passwordInput.type === 'password') {
+        passwordInput.type = 'text';
+        toggleIcon.classList.remove('fa-eye');
+        toggleIcon.classList.add('fa-eye-slash');
+      } else {
+        passwordInput.type = 'password';
+        toggleIcon.classList.remove('fa-eye-slash');
+        toggleIcon.classList.add('fa-eye');
+      }
+    }
+
+    // Fermer le modal en cliquant à l'extérieur
+    document.getElementById('passwordModal').addEventListener('click', function(e) {
+      if (e.target === this) {
+        hidePasswordModal();
+      }
+    });
+
+    // Fermer le modal avec la touche ESC
+    document.addEventListener('keydown', function(e) {
+      if (e.key === 'Escape') {
+        hidePasswordModal();
+      }
+    });
+  </script>
   <!-- Footer avec bouton de retour -->
   <footer class="bg-white border-t border-gray-200 mt-16">
     <div class="max-w-6xl mx-auto px-6 py-12 text-center">
@@ -282,7 +369,7 @@
             <div class="flex items-center justify-center mb-4">
               <div class="bg-white rounded-full p-3 mr-4 shadow-lg">
                 <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.465 3.516" fill="#25D366"/>
+                  <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.465 3.516" fill="#25D366"></path>
                 </svg>
               </div>
                 <h3 class="font-bold text-white text-2xl">Actualités en Direct</h3>
@@ -304,11 +391,9 @@
                 <span class="font-medium">Communauté active</span>
               </div>
             </div>
-            <a href="https://chat.whatsapp.com/E3H2dr47fcS8A9v9W2E48i"
-              target="_blank"
-              class="inline-flex items-center bg-white text-green-600 font-bold px-8 py-4 rounded-full text-lg shadow-lg hover:shadow-xl transform hover:scale-110 transition-all duration-300 hover:bg-green-50">
+            <a href="https://chat.whatsapp.com/E3H2dr47fcS8A9v9W2E48i" target="_blank" class="inline-flex items-center bg-white text-green-600 font-bold px-8 py-4 rounded-full text-lg shadow-lg hover:shadow-xl transform hover:scale-110 transition-all duration-300 hover:bg-green-50">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="mr-3">
-                <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.465 3.516"/>
+                <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.465 3.516"></path>
               </svg>
               Rejoindre le Groupe
               <span class="ml-2">→</span>
@@ -414,7 +499,8 @@
       </div>
     </div>
   </div>
-</body>
-</html>
-</body>
-</html>
+
+
+
+
+</body></html>
