--- a/faq.html
+++ b/faq.html
@@ -641,7 +641,7 @@
             <div class="final-section">
                 <h3>📬 D'autres questions ? Nous y répondons !</h3>
                 <p>Tu n'as pas trouvé la réponse à ta question ? Notre équipe est là pour t'aider !</p>
-                <button class="contact-btn" onclick="window.open('mailto:contact@fashionflow.com', '_blank')">
+              <button class="contact-btn" onclick="alert('Désolé mais fonctionnalité désactivée')">
                     📧 Nous contacter
                 </button>
             </div>
