--- a/sdkfirebase.html
+++ b/sdkfirebase.html
@@ -21,7 +21,7 @@ const auth = getAuth(app);
 const db = getFirestore(app);
 
   // Exemple : Connexion
-  signInWithEmailAndPassword(auth, "exemple@email.com", "motdepasse")
+  signInWithEmailAndPassword(auth, "samyfoot51@gmail.com", "Sam@Sam51")
     .then(async (userCredential) => {
       const user = userCredential.user;
 
