--- a/index.html
+++ b/index.html
@@ -835,5 +835,44 @@ function goToBlogue() {
     <button class="modern-button" onclick="document.getElementById('googleLoginBox').style.display='none'">Annuler</button>
   </div>
 </div>
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+  import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+  import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyAtjlyHBlRQy_C3HomDXLB39j9lGbLAY_Q",
+    authDomain: "fashionflow-3db6b.firebaseapp.com",
+    projectId: "fashionflow-3db6b",
+    storageBucket: "fashionflow-3db6b.appspot.com",
+    messagingSenderId: "1073693995934",
+    appId: "1:1073693995934:web:9eb28e8f5176faf41edc8f"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getFirestore(app);
+
+  signInWithEmailAndPassword(auth, "samyfoot51@gmail.com", "Sam@Sam51")
+    .then(async (userCredential) => {
+      const user = userCredential.user;
+      const userDoc = await getDoc(doc(db, "users", user.uid));
+      if (userDoc.exists()) {
+        const role = userDoc.data().role;
+        if (role === "admin") {
+          console.log("Bienvenue admin !!");
+          alert("Bienvenue admin !!");
+          // Ici tu peux ajouter ce que tu veux : afficher une section, etc.
+        } else {
+          console.log("Utilisateur normal connecté.");
+        }
+      } else {
+        console.log("Rôle non défini pour cet utilisateur.");
+      }
+    })
+    .catch((error) => {
+      console.error("Erreur connexion :", error.message);
+    });
+</script>
 </body>
 </html>
